@@ -198,6 +198,8 @@ include_once('include/page_header.php');
 	$multiselect = get_request('multiselect', 0); //if create popup with checkboxes
 	$dstact 	= get_request('dstact', '');
 	$writeonly = get_request('writeonly');
+	
+	$existed_templates = get_request('existed_templates', null);
 
 
 
@@ -253,6 +255,8 @@ include_once('include/page_header.php');
 	$frmTitle->addVar('srcfld2', $srcfld2);
 	$frmTitle->addVar('multiselect', $multiselect);
 	$frmTitle->addVar('writeonly', $writeonly);
+	if(!is_null($existed_templates))
+		$frmTitle->addVar('existed_templates', $existed_templates);
 
 
 // Optional
@@ -309,6 +313,7 @@ include_once('include/page_header.php');
 									'applications','screens','slides','graphs','simple_graph',
 									'sysmaps','plain_text','screens2','overview','host_group_scr')))
 		{
+
 			if(ZBX_DISTRIBUTED){
 				$cmbNode = new CComboBox('nodeid', $nodeid, 'submit()');
 
@@ -467,18 +472,20 @@ include_once('include/page_header.php');
 		}
 		else if(isset($_REQUEST['select'])){
 			$new_templates = array_diff($templates, $existed_templates);
+			$script = '';
 			if(count($new_templates) > 0) {
-				$script = '';
 				foreach($new_templates as $id => $name){
 					$script .= 'add_variable(null,"templates['.$id.']","'.$name.'","'.$dstfrm.'",window.opener.document);'."\n";
 				}
 
-				$script.= 'var form = window.opener.document.forms["'.$dstfrm.'"];'.
-					' if(form) form.submit();'.
-					' close_window();';
-				insert_js($script);
+				
 			} // if count new_templates > 0
 
+			$script.= 'var form = window.opener.document.forms["'.$dstfrm.'"];'.
+					' if(form) form.submit();'.
+					' close_window();';
+			insert_js($script);
+			
 			unset($new_templates);
 		}
 
@@ -487,15 +494,15 @@ include_once('include/page_header.php');
 
 		$options = array(
 				'nodeids' => $nodeid,
-				'groupids'=>$groupid,
+				'groupids' => $groupid,
 				'extendoutput' => 1,
-				'sortfield'=>'host'
+				'sortfield' => 'host'
 			);
 		if(!is_null($writeonly)) $options['editable'] = 1;
 
-		$templates = CTemplate::get($options);
+		$template_list = CTemplate::get($options);
 
-		foreach($templates as $tnum => $host){
+		foreach($template_list as $tnum => $host){
 
 			$chk = new CCheckBox('templates['.$host['hostid'].']',isset($templates[$host['hostid']]),
 					null,$host['host']);
